<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="#FAFAFA"
              android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:src="@mipmap/ablphone"
        android:layout_height="100dp"/>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/ablphone"
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_user"
           android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:inputType="textEmailAddress"
            android:id="@+id/tv_user"
            android:text="@string/username"/>

<EditText
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@null"
    android:layout_centerInParent="true"
    style="?android:attr/textViewStyle"
    android:layout_marginLeft="5dp"
    android:id="@+id/et_user"
    android:layout_toRightOf="@+id/tv_user"/>


    </RelativeLayout>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:background="#EDEDED"
        android:layout_height="1dp"></View>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/ablpwd"
            android:id="@+id/iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_pwd"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:id="@+id/tv_pwd"
            android:text="@string/pwd"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            style="?android:attr/textViewStyle"
            android:layout_marginLeft="5dp"
            android:id="@+id/et_pwd"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/tv_pwd"/>


    </RelativeLayout>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:background="#EDEDED"
        android:layout_height="1dp"></View>
    <RelativeLayout
        android:id="@+id/rl_yzm"
        android:layout_width="300dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/ablyzm"
            android:id="@+id/iv_yzm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_yzm"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:id="@+id/tv_yzm"
            android:text="@string/yzm"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@null"
            style="?android:attr/textViewStyle"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
           android:digits="@string/filter_vcode"
            android:id="@+id/et_yzm"
            android:layout_toRightOf="@+id/tv_yzm"/>

        <View
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:background="#EDEDED"
            android:layout_below="@+id/et_yzm"
            android:layout_height="1dp"></View>
    </RelativeLayout>

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/iv_showCode"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"

        android:layout_height="50dp" />

    <RelativeLayout

        android:layout_width="250dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
         android:background="@drawable/log_shap"
        android:layout_below="@+id/rl_logpwd"
        android:layout_marginTop="25dp"
        android:id="@+id/bt_login"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fafafa"
            android:textSize="18dp"
            android:text="@string/login"/>
    </RelativeLayout>

</LinearLayout>